--- a/package.json
+++ b/package.json
@@ -23,28 +23,15 @@
   },
   "homepage": "https://github.com/RaVenHelm/STAC-Console#readme",
   "dependencies": {
-    "koa": "^1.2.4",
-    "koa-bodyparser": "^2.2.0",
-    "koa-morgan": "^1.0.1",
-    "koa-mount": "^1.3.0",
-    "koa-passport": "^1.3.0",
-    "koa-router": "^5.4.0",
-    "koa-serve": "^0.1.7",
-    "koa-session": "^3.4.0",
-    "koa-views": "^5.1.2",
-    "pug": "^2.0.0-beta6"
+    "@types/electron": "^1.4.27",
+    "@types/jquery": "^2.0.34",
+    "electron": "^1.4.8",
+    "jquery": "^3.1.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-eslint": "^7.0.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-register": "^6.16.3",
     "chai": "^3.5.0",
     "eslint": "^3.8.1",
     "mocha": "^3.1.2",
-    "node-sass": "^3.10.1",
-    "nodemon": "^1.11.0",
-    "supertest": "^2.0.1"
+    "node-sass": "^3.10.1"
   }
 }
